--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: filengun/infra_actions-hub:latest 
+          tags: filengun/infra_actions:v1 
